<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <EditText
        android:id="@+id/radSearch"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lngSearch" />

    <TextView
        android:id="@+id/endLabel4"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="14dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="34dp"
        android:text="Radius:"
        app:layout_constraintEnd_toStartOf="@+id/radSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latSearch" />

    <TextView
        android:id="@+id/endLabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginTop="18dp"
        android:text="Longitude:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDate" />

    <TextView
        android:id="@+id/endLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="54dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:text="Latitude:"
        app:layout_constraintEnd_toStartOf="@+id/endLabel3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDate" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="28dp"
        android:onClick="exit"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="31dp"
        android:onClick="search"
        android:text="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radSearch" />

    <EditText
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="71dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="71dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endLabel" />

    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="221dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="221dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="70dp"
        android:text="Start Date:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/endLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="228dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="228dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="14dp"
        android:text="End Date:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDate" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="71dp"
        android:layout_marginLeft="73dp"
        android:layout_marginRight="71dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLabel" />

    <EditText
        android:id="@+id/lngSearch"
        android:layout_width="121dp"
        android:layout_height="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endLabel3" />

    <EditText
        android:id="@+id/latSearch"
        android:layout_width="109dp"
        android:layout_height="40dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/lngSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endLabel2" />
</android.support.constraint.ConstraintLayout>