<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="6dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/searchPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="32dp"
        android:onClick="searchClick"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uploadPhoto"
        app:layout_constraintTop_toBottomOf="@+id/snapPhoto" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:onClick="settingsClick"
        android:text="Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchPhoto"
        app:layout_constraintTop_toBottomOf="@+id/navRight" />

    <Button
        android:id="@+id/navRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="36dp"
        android:onClick="rightClick"
        android:text="Right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/snapPhoto"
        app:layout_constraintTop_toBottomOf="@+id/photoView" />

    <Button
        android:id="@+id/navLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:onClick="leftClick"
        android:text="Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoView" />

    <Button
        android:id="@+id/uploadPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="uploadClick"
        android:text="Upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navLeft" />

    <Button
        android:id="@+id/snapPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="36dp"
        android:onClick="snapClick"
        android:text="Snap"
        app:layout_constraintStart_toEndOf="@+id/navLeft"
        app:layout_constraintTop_toBottomOf="@+id/photoView" />

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="338dp"
        android:layout_height="359dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:contentDescription="preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>